# wasmperf

./: .gitignore  Makefile  README.md  build  experiments.yaml  log  main  summary.ipynb
natives/memcpy/: CMakeLists.txt  atomics.cpp
src/: atomics.cpp  demo.cpp  matrix_naive.cpp  matrix_naive.hpp  memcpy.hpp  memcpy_block.cpp  memcpy_shuffle.cpp  merge.cpp
static/: index.html
utils/: analyze.py  atomics_plot.py  experiment.py  experiment_test.py  lab.py  logs.py  plot.py
